2019-04-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault when running qalc in non-interactive mode and gnuplot is missing (issue #184)

2019-04-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix nextlunarphase(), for values > 0.8 and < 0.2 (issue #183)

2019-03-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault during calculation of atan(acos(x)), atan(asin(x)), and asin(atan(x)) when angle unit is deg or gra

2019-03-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix order of prime factors

2019-03-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add persistent parameter, with default true value if qalc is started in non-interactive mode (avoids immediate closing of plot window), to plot() function

2019-02-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix max decimals option for intervals displayed with significant digits (was used as both max and min)

2019-02-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add "Number of decimals" and "Round halfway to even" (default away from zero) arguments to round() function

2019-02-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Restore A and B (case insensitive) digits in input of duodecimal number
	* Use 0d as prefix for input of duodecimal numbers
	* Always interpret expression as duodecimal if it contains duodecimal Unicode characters

2019-02-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* IEEE 754 floating point (binary) conversion - functions float(), floatBits(), floatError(), floatParts(), and floatValue(), and "to" conversion using  binary16/fp16, binary32/fp32/float, binary64/fp64/double, fp80, and binary128/fp128
	* Support specification of number of bits for binary "to" conversion (4 to bin16 = 0000 0000 0000 0100)
	* Fix rounding with max decimals in some cases

2019-02-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault in solve() with AND and OR in solution
